# jissen-django

./: LICENSE  README.md  pyproject.toml  setup.cfg
djangosnippets/djangosnippets/: settings.py  urls.py
djangosnippets/snippets/: models.py  tests.py  views.py
djangosnippets/snippets/migrations/: 0001_initial.py
djangosnippets/snippets/templates/snippets/: snippet_detail.html  top.html
