[tool.poetry]
name = "jissen-django"
version = "0.1.0"
description = ""
authors = ["ishuzaks <k.suzuki512+develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
mypy = "^0.950"
flake8 = "^4.0.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
