[tool.poetry]
name = "jissen-django"
version = "0.1.0"
description = ""
authors = ["ishuzaks <k.suzuki512+develop@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
